...
            VStack(spacing: 0) {
                TabView(selection: $selectedTab) {
                    HomepageView()
                        .environmentObject(profileVM)
                        .tabItem {
                            Image(systemName: "house.fill")
                            Text("Home")
                        }
                        .tag(0)
                        .onAppear {
                            UITabBar.appearance().isHidden = false
                        }

                    RecentMemoriesView(selectedTab: $selectedTab)
                        .environmentObject(profileVM)
                        .tabItem {
                            Image(systemName: "clock.fill")
                            Text("Saved Stories")
                        }
                        .tag(1)
                        .onAppear {
                            UITabBar.appearance().isHidden = false
                        }
                }
...
