...
                        NavigationLink(destination: StoryPage()
                            .environmentObject(profileVM)
                            .environmentObject(tutorialCoordinator)
                        ) {
                            HStack {
                                VStack(alignment: .leading, spacing: 4) {
                                    Text("Your Book")
                                        .font(.subheadline)
                                        .fontWeight(.bold)
                                        .foregroundColor(.black)
                                    Text("Generate your life story here!")
                                        .font(.footnote)
                                        .foregroundColor(.black.opacity(0.7))
...
